# ChangeLog for games-emulation/fakenes
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/fakenes/ChangeLog,v 1.4 2004/03/07 20:26:54 mr_bones_ Exp $

  07 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> fakenes-0.3.0.ebuild:
  depend on sed >= 4; more error checking/messages

*fakenes-0.3.0 (25 Sep 2003)

  25 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bumpage.  ~x86 since it needs latest allegro.

*fakenes-0.1.5 (13 Jul 2003)

  13 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.