@@ -1,8 +1,8 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/fakenes/Attic/fakenes-0.1.5.ebuild,v 1.2 2004/02/20 06:26:47 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/fakenes/Attic/fakenes-0.1.5.ebuild,v 1.3 2004/04/22 09:53:42 mr_bones_ Exp $
 
-inherit games eutils
+inherit eutils games
 
 DESCRIPTION="portable, Open Source NES emulator which is written mostly in C"
 HOMEPAGE="http://fakenes.sourceforge.net/"
@@ -11,26 +11,30 @@ SRC_URI="mirror://sourceforge/fakenes/${P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="x86"
-IUSE="X gnome"
+IUSE=""
 
-DEPEND="media-libs/allegro
+RDEPEND="media-libs/allegro
 	sys-libs/zlib"
+DEPEND="${RDEPEND}
+	>=sys-apps/sed-4"
 
 src_unpack() {
 	unpack ${A}
 	cd ${S}/src
 	epatch ${FILESDIR}/${PV}-datadir.patch
-	sed -i "s:GENTOO_DIR:${GAMES_DATADIR}/${PN}:" main.c
+	sed -i \
+		-e "s:GENTOO_DIR:${GAMES_DATADIR}/${PN}:" main.c \
+			|| die "sed main.c failed"
 }
 
 src_compile() {
 	egamesconf || die
-	make || die
+	emake -j1 || die "emake failed"
 }
 
 src_install() {
-	dogamesbin src/fakenes
-	insinto ${GAMES_DATADIR}/${PN}
+	dogamesbin src/fakenes || die "dogamesbin failed"
+	insinto "${GAMES_DATADIR}/${PN}"
 	doins src/support/fakenes.{dat,ico,rc}
 	dodoc CHANGES README SOURCE SUPPORT
 }
