@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/fakenes
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/fakenes/ChangeLog,v 1.4 2004/03/07 20:26:54 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/fakenes/ChangeLog,v 1.5 2004/04/22 09:53:42 mr_bones_ Exp $
+
+  22 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> fakenes-0.1.5.ebuild:
+  sync IUSE; error check; tidy
 
   07 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> fakenes-0.3.0.ebuild:
   depend on sed >= 4; more error checking/messages
